# rest-api-blog

./: .dockerignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
config/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/management/commands/: seed_data.py
posts/migrations/: 0001_initial.py  0002_alter_post_title_alter_post_updated_at_comment.py  0003_post_slug.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
